--- a/et/et56.md
+++ b/et/et56.md
@@ -604,7 +604,7 @@ Nad elavad Hiinas.
 
 Minu Pere
 
-Tere! Minu nimi on Xinjian Zhang. Ma olen hiinlane. Ma  olen pärit Kunmingist, Hiinast. Ma elan praegu Tartus. Mul on vaike pere. 
+Tere! Minu nimi on Xinjian Zhang. Ma olen hiinlane. Ma  olen pärit Kunmingist, Hiinast. Ma elan praegu Tartus. Mul on väike pere. 
 
 Minu pere elab Hiinas ja minu sugulased elavad Hiinas. Mul on kaks vanaisa ja kaks vanaema. Minu vanaisade nimed on Peizhi ja Zhengrong. Minu vanaemade nimed on Binglan ja Juzhen. Minu ema nimi on Yizhen. Ta on 50 aastat vana. Ta on õpetaja. Minu isa nimi on Tianfu. Ta on 50 aastat vana. Ta on raamatupidaja.
 
